# genR8

./: .env.example  README.md  pyproject.toml  run.sh  spec.md
genr8/: cli.py  client.py  config.py  video_pipeline.py  web.py
tests/: test_client.py  test_video_pipeline.py  test_web.py
